[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["tyropro <tyroprocodes@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.3.2"
pyyaml = "^6.0.1"
jurigged = "^0.5.7"
pytimeparse = "^1.1.8"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
